Fix double border on comment replies
https://dl.dropboxusercontent.com/s/i60g2kefk4voymd/Screenshot%202014-08-08%2017.38.47.png

--- a/app/assets/stylesheets/partials/status-panel.css.scss
+++ b/app/assets/stylesheets/partials/status-panel.css.scss
@@ -226,6 +226,7 @@
 
   padding: 0;
   font-size: 0.8em;
+  border-top: none;
 
   .actions {
     @extend .row;
